<resources>
    <string name="app_name">register-child</string>
    <string name="child_registration">Child Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
</resources>